@@ -41,8 +41,11 @@ Imported Targets
 find_package(PkgConfig QUIET)
 find_program(LIBGCRYPTCONFIG_SCRIPT NAMES libgcrypt-config)
 if (PkgConfig_FOUND)
+    # XXX: The libgcrypt.pc file does not list gpg-error as a dependency,
+    #      resulting in linking errors; search for the latter as well.
     pkg_check_modules(PC_GCRYPT QUIET libgcrypt)
-    set(LibGcrypt_COMPILE_OPTIONS ${PC_GCRYPT_CFLAGS_OTHER})
+    pkg_check_modules(PC_GPGERROR QUIET gpg-error)
+    set(LibGcrypt_COMPILE_OPTIONS ${PC_GCRYPT_CFLAGS_OTHER} ${PC_GPGERROR_CFLAGS_OTHER})
     set(LibGcrypt_VERSION ${PC_GCRYPT_VERSION})
 elseif (LIBGCRYPTCONFIG_SCRIPT)
     execute_process(
@@ -67,7 +70,7 @@ elseif (LIBGCRYPTCONFIG_SCRIPT)
     endif ()
 
     execute_process(
-        COMMAND "${LIBGCRYPTCONFIG_SCRIPT}" --cflags
+        COMMAND "${LIBGCRYPTCONFIG_SCRIPT}" --version
         RESULT_VARIABLE CONFIGSCRIPT_RESULT
         OUTPUT_VARIABLE CONFIGSCRIPT_VALUE
         OUTPUT_STRIP_TRAILING_WHITESPACE
@@ -76,6 +79,19 @@ elseif (LIBGCRYPTCONFIG_SCRIPT)
         string(REGEX MATCH "^([0-9]+\.[0-9]+\.[0-9]+)" LibGcrypt_VERSION "${CONFIGSCRIPT_VALUE}")
     endif ()
 endif ()
+
+find_path(LibGcrypt_GpgError_INCLUDE_DIR
+    NAMES gpg-error.h
+    HINTS ${PC_GPGERROR_INCLUDEDIR} ${PC_GPGERROR_INCLUDE_DIRS}
+          ${PC_GCRYPT_INCLUDEDIR} ${PC_GCRYPT_INCLUDE_DIRS}
+          ${LIBGCRYPT_SCRIPT_INCLUDE_HINT} ${LibGcrypt_INCLUDE_DIR}
+)
+
+find_library(LibGcrypt_GpgError_LIBRARY
+    NAMES ${LibGcrypt_GpgError_NAMES} gpg-error libgpg-error
+    HINTS ${PC_GPGERROR_LIBDIR} ${PC_GPGERROR_LIBRARY_DIRS}
+          ${PC_GCRYPT_LIBDIR} ${PC_GCRYPT_LIBRARY_DIRS} ${LIBGCRYPT_SCRIPT_LIB_HINT}
+)
 
 find_path(LibGcrypt_INCLUDE_DIR
     NAMES gcrypt.h
@@ -97,8 +113,17 @@ include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(LibGcrypt
     FOUND_VAR LibGcrypt_FOUND
     REQUIRED_VARS LibGcrypt_LIBRARY LibGcrypt_INCLUDE_DIR
+                  LibGcrypt_GpgError_LIBRARY LibGcrypt_GpgError_INCLUDE_DIR
     VERSION_VAR LibGcrypt_VERSION
 )
+
+if (LibGcrypt_GpgError_LIBRARY AND NOT TARGET LibGcrypt::GpgError)
+    add_library(LibGcrypt::GpgError UNKNOWN IMPORTED GLOBAL)
+    set_target_properties(LibGcrypt::GpgError PROPERTIES
+        IMPORTED_LOCATION "${LibGcrypt_GpgError_LIBRARY}"
+        INTERFACE_INCLUDE_DIRECTORIES "${LibGcrypt_GpgError_INCLUDE_DIR}"
+    )
+endif ()
 
 if (LibGcrypt_LIBRARY AND NOT TARGET LibGcrypt::LibGcrypt)
     add_library(LibGcrypt::LibGcrypt UNKNOWN IMPORTED GLOBAL)
@@ -107,11 +132,13 @@ if (LibGcrypt_LIBRARY AND NOT TARGET LibGcrypt::LibGcrypt)
         INTERFACE_COMPILE_OPTIONS "${LibGcrypt_COMPILE_OPTIONS}"
         INTERFACE_INCLUDE_DIRECTORIES "${LibGcrypt_INCLUDE_DIR}"
     )
+    target_link_libraries(LibGcrypt::LibGcrypt INTERFACE LibGcrypt::GpgError)
 endif ()
 
-mark_as_advanced(LibGcrypt_INCLUDE_DIR LibGcrypt_LIBRARY)
+mark_as_advanced(LibGcrypt_INCLUDE_DIR LibGcrypt_LIBRARY
+    LibGcrypt_GpgError_INCLUDE_DIR LibGcrypt_GpgError_LIBRARY)
 
 if (LibGcrypt_FOUND)
-    set(LibGcrypt_LIBRARIES ${LibGcrypt_LIBRARY})
-    set(LibGcrypt_INCLUDE_DIRS ${LibGcrypt_INCLUDE_DIR})
+    set(LibGcrypt_LIBRARIES ${LibGcrypt_LIBRARY} ${LibGcrypt_GpgError_LIBRARY})
+    set(LibGcrypt_INCLUDE_DIRS ${LibGcrypt_INCLUDE_DIR} ${LibGcrypt_GpgError_INCLUDE_DIR})
 endif ()
