@@ -1,5 +1,16 @@
 2021-07-29  Adrian Perez de Castro  <aperez@igalia.com>
 
+        [CMake] Fix missing libgpg-error not added to link commands as libgcrypt dep after r280423
+        https://bugs.webkit.org/show_bug.cgi?id=228581
+
+        Reviewed by Carlos Alberto Lopez Perez.
+
+        * Source/cmake/FindLibGcrypt.cmake: Manually search for libgpg-error, which is not listed
+        in libgcrypt.pc as a dependency, add an imported target for it, and add it as a dependency
+        of LibGcrypt::LibGcrypt to avoid missing symbols at link time.
+
+2021-07-29  Adrian Perez de Castro  <aperez@igalia.com>
+
         [CMake] Use an imported target for the libgcrypt library
         https://bugs.webkit.org/show_bug.cgi?id=228581
 
